applications/gng-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gng-frontend
  name: gng-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gng-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: gng-frontend
    spec:
      containers:
      - name: gng-frontend
        image: quay.io/cpigues/gng-frontend-api:latest
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "750m"
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
