applications/gng-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gng-frontend
  name: gng-frontend
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
    name: app
  selector:
    app: gng-frontend
  sessionAffinity: None
  type: ClusterIP
