applications/gng-frontend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: gng-frontend
  name: gng-frontend
spec:
  host: www.griotandgrits.org
  port:
    targetPort: 3000
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: gng-frontend
    weight: 100
  wildcardPolicy: None
